Help widget: fix double click, fix single click on suggestions not opening the popup sometimes, fix scrollbar issue, added ellipses if too long

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2556,15 +2556,18 @@ strong {
         }
 
         > .ui-menu {
+            position: initial;
+
             > .inner {
+                position: initial;
                 width: 100%;
-                top: 100%;
-                position: absolute;
                 max-height: 6.5 * 33px;
-                overflow-y: auto;
                 overflow-x: hidden;
+                overflow-y: auto;
 
                 > .ui-menu-item {
+
+                    width: 100%;
 
                     &:hover > .title {
                         background-color: transparent;
@@ -2577,6 +2580,10 @@ strong {
                     > .title {
                         font-size: 12px;
                         color: $text-primary;
+
+                        width: 100%;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
                 }
 
